# rust-git-fsmonitor-hook

./: Cargo.toml  LICENSE  README.md
src/: main.rs
