[package]
name = "rust-git-fsmonitor"
description = "A watchman based fsmonitor for git\n\nInstall with\ngit config core.fsmonitorhookversion 2\ngit config core.fsmonitor git-fsmonitor-watchman-rs\n"
keywords = ["git", "watchman"]
license = "MIT"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "git-fsmonitor-watchman-rs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.69"
serde = "1.0.156"
serde_json = "1.0.94"
tokio = "1.26.0"
watchman_client = "0.9.0"
